--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -22,16 +22,14 @@
 
 .columnCard{
     width: 320px;
-    height: 800px;
-
-    background: rgba( 255, 255, 255, 0.35 );
+    height: 830px;
+    background-color: #FFF;
     box-shadow: 0 2px 20px 0 rgba(10, 11, 37, 0.37);
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-
+    padding: 5px;
     flex-direction: column;
     justify-content: start;
-    padding: 15px;
 }
 
 .title{
@@ -55,7 +53,9 @@
     height: 100%;
     justify-content: start;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
+    padding: 10px;
+    position: relative;
 }
 .card{
     width: 100%;
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: space-between;
 
-    background: rgba( 255, 255, 255, 0.35 );
+    background-color: #FFF;
     box-shadow: 0 2px 5px 0 rgba(10, 11, 37, 0.37);
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
@@ -102,11 +102,14 @@
     width: 150px;
     height: 30px;
     color: #8a2be2;
-    background-color: #892be21a;
+    background-color: #892be20e;
     border: 1px solid #8a2be2;
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.5s;
+
+    position: absolute;
+    bottom: 10px;
 
     & i{
         padding-right: 10px;
@@ -134,5 +137,7 @@
 }
 
 .columnHover{
-    background: rgba(211, 92, 92, 0.829);
+    background-color: rgba(143, 24, 255, 0.048);
+    border: solid 1px #892be24d;
+    border-radius: 10px;
 }
