--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -13,16 +13,18 @@
 }
 
 .container{
-    max-width: 1200px;
-    width: 100%;
+    align-items: start;
+    margin-top: 50px;
+    
+    min-width: 350px;
     height: 100vh;
-
     gap: 15px;
 }
 
 .columnCard{
     width: 320px;
-    height: 830px;
+    min-height: 770px;
+    gap: 20px;
     background-color: #FFF;
     box-shadow: 0 2px 20px 0 rgba(10, 11, 37, 0.37);
     border-radius: 10px;
@@ -49,8 +51,8 @@
 }
 
 .cards{
-    width: 100%;
-    height: 100%;
+    width: 320px;
+    min-height: 770px;
     justify-content: start;
     flex-direction: column;
     gap: 20px;
@@ -58,12 +60,12 @@
     position: relative;
 }
 .card{
-    width: 100%;
-    height: 100px;
+    width: 300px;
+    height: 105px;
     align-items: start;
     flex-direction: column;
     justify-content: space-between;
-
+    position: relative;
     background-color: #FFF;
     box-shadow: 0 2px 5px 0 rgba(10, 11, 37, 0.37);
     border-radius: 10px;
@@ -71,54 +73,37 @@
     padding: 10px;
     cursor: pointer;
     transition: all 0.5s;
-
-    & .nameCards{
-        font-size: 1.0rem;
-        font-weight: 500;
-        width: 100%;
-    }
-
-    & .tag{
-        font-size: 0.6rem;
-        border: 1px solid ;
-        border-radius: 10px;
-        padding: 3px;
-    }
-    & .date{
-        font-size: 0.7rem;
-
-    }
-}
-.card:hover{
-    background-color: #f1f1f1;
-    transform: scale(1.05);
 }
 
-
-.add{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 150px;
-    height: 30px;
-    color: #8a2be2;
-    background-color: #892be20e;
-    border: 1px solid #8a2be2;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all 0.5s;
-
+.card .icons {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: rgb(133, 131, 131);
+    width: 20px;
+    text-align: center;
+}
+.date{
     position: absolute;
     bottom: 10px;
-
-    & i{
-        padding-right: 10px;
-    }
+    font-size: 0.7rem;
+    left: 10px;
 }
-.add:hover{
-    background-color: #8a2be2;
-    color: #FFF;
-    transform: scale(1.05);
+
+.nameCards{
+    font-size: 1.0rem;
+    font-weight: 500;
+
+}
+
+.card:hover{
+    background-color: #f1f1f1;
+    transform: scale(1.02);
+}
+
+
+.icons .fa-plus{
+    margin-right: 10px;
 }
 
 .red{
@@ -140,4 +125,51 @@
     background-color: rgba(143, 24, 255, 0.048);
     border: solid 1px #892be24d;
     border-radius: 10px;
+}
+
+.editCard{
+    width: 150px;
+    height: 70px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #FFF;
+    box-shadow: 0 2px 5px 0 rgba(10, 11, 37, 0.37);
+    border-radius: 5px;
+    position: absolute;
+    right: 0px;
+    padding: 5px;
+    gap: 10px;
+    z-index: 1;
+}
+
+.editCard i{
+    margin-right: 5px;
+}
+
+.hide{
+    display: none;
+}
+.fa-ellipsis-verticalfa-ellipsis-vertical{
+    width: 10px;
+    height: 10px;
+    background-color: red;
+}
+
+#addColumns{
+    width: 50px;
+    height: 50px;
+    background-color: #892be2;
+    border-radius: 50%;
+    color: #FFF;
+    font-size: 1.3rem;
+    cursor: pointer;
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}
+
+#addColumns i{
+    pointer-events: none;
 }
