--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -5,7 +5,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-
 .flex{
     display: flex;
     align-items: center;
@@ -13,17 +12,16 @@
 }
 
 .container{
+    display: flex;
     align-items: start;
-    margin-top: 50px;
-    
-    min-width: 350px;
-    height: 100vh;
+    justify-content: start;
     gap: 15px;
+    margin-top: 100px;
 }
 
 .columnCard{
     width: 320px;
-    min-height: 770px;
+    height: 770px;
     gap: 20px;
     background-color: #FFF;
     box-shadow: 0 2px 20px 0 rgba(10, 11, 37, 0.37);
@@ -32,6 +30,7 @@
     padding: 5px;
     flex-direction: column;
     justify-content: start;
+    margin: 30px;
 }
 
 .title{
@@ -40,6 +39,7 @@
     height: 40px;
     padding-top: -10px;
     margin-bottom: 10px;
+    position: relative;
 
     & span{
         font-weight: 500;
@@ -47,12 +47,25 @@
     & i{
         width: 10px;
         cursor: pointer;
+        position: relative;
     }
+}
+
+.title span:focus{
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+    border-bottom: 1px solid #892be23a;
+}
+.nameCards:focus{
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+    border-bottom: 1px solid #892be23a;
 }
 
 .cards{
     width: 320px;
-    min-height: 770px;
     justify-content: start;
     flex-direction: column;
     gap: 20px;
@@ -83,10 +96,20 @@
     width: 20px;
     text-align: center;
 }
+
+.title .icons {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: rgb(133, 131, 131);
+    width: 40px;
+    text-align: center;
+}
+
 .date{
     position: absolute;
     bottom: 10px;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     left: 10px;
 }
 
@@ -98,27 +121,11 @@
 
 .card:hover{
     background-color: #f1f1f1;
-    transform: scale(1.02);
 }
 
 
 .icons .fa-plus{
     margin-right: 10px;
-}
-
-.red{
-    color: red;
-    background-color: rgba(255, 0, 0, 0.062);
-}
-
-.blue{
-    color: rgb(0, 26, 255);
-    background-color: rgba(0, 17, 255, 0.062);
-}
-
-.green{
-    color: rgb(79, 211, 74);
-    background-color: rgba(72, 255, 0, 0.062);
 }
 
 .columnHover{
@@ -145,8 +152,10 @@
 }
 
 .editCard i{
-    margin-right: 5px;
+    width: 10px;
+    margin-right: 10px;
 }
+
 
 .hide{
     display: none;
@@ -158,18 +167,72 @@
 }
 
 #addColumns{
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     background-color: #892be2;
     border-radius: 50%;
     color: #FFF;
     font-size: 1.3rem;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     right: 30px;
     bottom: 30px;
 }
 
 #addColumns i{
     pointer-events: none;
+    width: 20px;
+}
+
+.kanban{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    padding: 10px;
+    height: 100vh;
+    overflow: hidden;
+    overflow-x: auto;
+}
+
+.nav{
+    height: 70px;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    background-color: #892be2;
+    color: #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 50px 10px 50px;
+}
+
+.nav span{
+    font-size: 2rem;
+    font-weight: 600;
+}
+.userName{
+    font-size: 1.2rem;
+}
+.userPhoto img{
+    width: 40px;
+    height: 40px;
+
+    border-radius: 50%;
+    margin-right: 20px
+}
+
+
+@media screen and (max-width: 600px){
+    .userPhoto img{
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+    }
+    .userName{
+        font-size: 1rem;
+    }
 }
